# test

./: .gitignore  analyzer.py  app.py  data_fetcher.py  requirements.txt  ui_components.py
investment-api/: pyproject.toml
investment-api/app/: main.py
investment-api/app/models/: schemas.py
investment-api/app/routers/: costs.py  portfolio.py  simulation.py
investment-api/app/services/: education_cost.py  portfolio.py  simulation.py  travel_cost.py
investment-frontend/: index.html  package-lock.json  package.json
investment-frontend/src/: App.tsx
investment-frontend/src/api/: client.ts
investment-frontend/src/pages/: Dashboard.tsx  Portfolio.tsx  Profile.tsx  Simulation.tsx  StressTest.tsx
investment-frontend/src/types/: index.ts
models/: __init__.py  housing_cost.py  securities_master.py  vehicle_cost.py
pages/: 01_現在ポートフォリオ分析.py  02_入れ替え後ポートフォリオ分析.py  03_ユーザープロファイル.py  04_ライフイベント計画.py  05_資産シミュレーション.py  06_現状分析ダッシュボード.py  07_戦略提案ダッシュボード.py  08_ストレステスト.py  09_統合ダッシュボード.py
utils/: formatters.py
